# Game

./: CMakeLists.txt  README.md
App/: GameApplication.cpp  GameApplication.h  main.cpp
Common/: GameRenderData.h  ICommand.h  INotifyPropertyChanged.h
Model/: CollisionDetector.cpp  CollisionDetector.h  GameModel.cpp  GameModel.h  Leaf.cpp  Leaf.h  LeafManager.cpp  LeafManager.h  MathUtils.h  Player.cpp  Player.h
Tests/: ModelTests.cpp
View/: GameRenderer.cpp  GameRenderer.h  GameWindow.cpp  GameWindow.h  HUDRenderer.cpp  HUDRenderer.h  InputHandler.cpp  InputHandler.h
ViewModel/: GameViewModel.cpp  GameViewModel.h
ViewModel/Commands/: Commands.cpp  Commands.h
